<resources>
    <string name="app_name">Champions</string>
    <string name="signup">SignUp</string>

    <string name="txtwelcome">Welcome</string>
    <string name="EditTextLogin">Enter Your Phone </string>
    <string name="EditTextLoginPassword">Enter Your Password </string>
    <string name="txtOr">Or</string>
    <string name="Ready">Ready</string>
    <string name="ToDiscover">To Discover</string>
    <string name="Talent">Talent</string>
    <string name="SearchCategoryDance">Who do you want to get ?</string>
    <string name="Dancing">Dancing</string>
    <string name="Acting">Acting</string>
    <string name="Cooking">Cooking</string>
    <string name="Drawing">Drawing</string>

    <string name="Terms">By continuing you agree CHAMPIONS Terms of Services and Privacy Policy</string>

    <string name="NewUser">New User</string>
    <string name="RegInformation">Register Information</string>
    <string name="RegContentInfo">gister Now !
Lorem ipsum dolor sit amet, consectetuer adipiscing
elit, sed diam nonummy nibh euismod tincidunt ut
laoreet dolore magna aliquam erat</string>
    <string name="TalentOwner">Talent Owner</string>
    <string name="TalentFinder">Talent Finder</string>
    <string name="BasicInformation">Basic Information</string>
    <string name="FullName">Full Name *</string>
    <string name="BOD">Birth Of Date *</string>
    <string name="Email">E-mail *</string>
    <string name="LoginInformation">Login Information</string>
    <string name="MobileNumber">Mobile Number *</string>
    <string name="Password">Password *</string>
    <string name="RegisterNow">Register Now !</string>
    <string name="Country">Country</string>
    <string name="City">City</string>

    <string name="PopulerPainters">Populer Painters</string>
    <string name="PopulerDancing">Populer Dancing</string>

    <string name="Singing">Singing</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>