<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Ui.Main.MainRegister">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/righteous_regular"
        android:gravity="center"
        android:text="@string/NewUser"
        android:textSize="20sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/shape_fram_newuser"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/RegInformation"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegContentInfo">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_talentowner"
            android:fontFamily="@font/righteous_regular"
            android:text="@string/TalentOwner"
            android:textColor="@color/colorwhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_talentfinder"
            android:fontFamily="@font/righteous_regular"
            android:text="@string/TalentFinder"
            android:textColor="@color/colorwhite" />
    </LinearLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:fontFamily="@font/cabin_semibold_ttf"
        android:text="@string/BasicInformation"/>

        <EditText android:id="@+id/FName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/FullName"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText android:id="@+id/BOF"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/BOD"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold">
        </EditText>

        <EditText android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/Email"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />
         <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:singleLine="true"
        android:fontFamily="@font/cabin_semibold_ttf"
        android:text="@string/LoginInformation"/>
        <EditText android:id="@+id/Mobile"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/MobileNumber"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />
        <EditText android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/SelectCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/Country"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/SelectCity"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin_semibold_ttf"
            android:hint="@string/City"
            android:singleLine="true"
            android:textColor="@color/TxtColorRegUser"
            android:textSize="12sp"
            android:textStyle="bold" />

       </LinearLayout>

    <Button android:id="@+id/BtnRegistration"
        android:textColor="@color/colorwhite"
        android:text="@string/RegisterNow"
        android:fontFamily="@font/cabin_semibold_ttf"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>
</LinearLayout>

</ScrollView>