<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".Ui.Main.MainDancing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/artboard1"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:padding="20dp"
            android:text="@string/Dancing"
            android:textColor="@color/colorwhite"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>
        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/ImgSearch"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:contentDescription="@string/SearchCategoryDance"
                android:src="@drawable/iconsearch">

            </ImageView>

            <EditText
                android:layout_centerInParent="true"
                android:id="@+id/EDSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/shape_fram_searchcategoury"
                android:hint="@string/SearchCategoryDance"
                android:inputType="text"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorwhite"
                android:textSize="20sp">

            </EditText>

        </RelativeLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:background="@drawable/shape_content_category"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous_regular"
            android:paddingTop="20sp"
            android:paddingRight="20sp"
            android:paddingLeft="20sp"
            android:paddingBottom="10sp"
            android:text="@string/PopulerDancing"
            android:textSize="20sp">

   </TextView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVPupularDancing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVAllDancing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>